--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "stdlib.h": "c"
-    }
+        "stdlib.h": "c",
+        "algorithm_benchmark.h": "c",
+        "array": "c"
+    },
+    "C_Cpp.default.compilerPath": "c:\\Program Files\\mingw64\\bin\\gcc.exe"
 }
